2010-07-10  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (MAINTAINER_CLEANFILES): Remove
	unicode/UnicodeData.txt, unicode/BidiMirroring.txt, and
	unicode/ArabicShaping.txt again; these are inputs to autogen.sh, not
	outputs.

2010-07-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Restructure SCSI .id handling.
	Reported and tested by: Aleš Nesrsta.

	* disk/ata.c (grub_atapi_close): Removed. All users updated.
	(grub_atapi_dev): Changed .name to "ata". New field .id.
	* disk/usbms.c (grub_usbms_close): Removed. All users updated.
	(grub_usbms_dev): New field .id.
	* disk/scsi.c (grub_scsi_iterate): Generate name.
	(grub_scsi_open): Parse name.
	* include/grub/scsi.h (grub_make_scsi_id): New function.
	(grub_scsi_dev): Change iterate and open to number instead of naming
	busses. All users updated.
	(grub_scsi): Remove name. Add .bus.

2010-07-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/help.c (grub_cmd_help): Fix a typo.

2010-07-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/term.c (put_glyphs_terminal): Fix state->num_lines counting.
	Reported and tested by: Colin Watson.

2010-07-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Don't use tar GNU-ism since it's not necessary
	in this context.

2010-07-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Remove bashisms and declare as sh script.

2010-07-07  Colin Watson  <cjwatson@ubuntu.com>

	* term/gfxterm.c (grub_gfxterm_background_image_cmd): Fix
	indentation.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* conf/common.rmk (grub_probe_SOURCES): Add disk/raid5_recover.c
	and disk/raid6_recover.c.
	* conf/i386-pc.rmk (grub_setup_SOURCES): Likewise.
	* conf/sparc64-ieee1275.rmk (grub_setup_SOURCES): Likewise.

2010-07-06  Colin Watson  <cjwatson@ubuntu.com>

	* term/gfxterm.c (repaint_schedulded): Rename to ...
	(repaint_scheduled): ... this.  Update all callers.
	(repaint_was_schedulded): Rename to ...